--- a/index.html
+++ b/index.html
@@ -1726,7 +1726,7 @@
 			examAreas.innerHTML = '';
 			
 			if (exams.length === 0) {
-				examAreas.innerHTML = '<p style="text-align: center; color: #666; padding: 40px;">No hay exámenes cargados. Usa la pestaña "Cargar Preguntas" para añadir exámenes.</p>';
+				examAreas.innerHTML = '<p style="text-align: center; color: #666; padding: 40px; font-style: italic;">No hay exámenes cargados. Usa la pestaña "Cargar Preguntas" para añadir exámenes.</p>';
 				return;
 			}
 			
