--- a/index.html
+++ b/index.html
@@ -1813,7 +1813,7 @@
 		const container = document.getElementById('resultsContainer');
 		
 		if (examResults.length === 0) {
-			container.innerHTML = '<p>No has realizado ningún examen aún.</p>';
+			container.innerHTML = '<p style="text-align: center; color: #666; padding: 40px; font-style: italic;">No has realizado ningún examen aún.</p>';
 			return;
 		}
 		
