--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
 			<div id="temas" class="tab-content hidden">
 				<h2 style="margin-bottom: 10px;">🎨 Personalizar Tema</h2>
 				<div class="theme-options">
-					<p style="margin-bottom: 20px;">Selecciona un color de tema para personalizar la interfaz:</p>
+					<p style="margin-bottom: 20px; font-style: italic;">Selecciona un color de tema para personalizar la interfaz:</p>
 					<div class="theme-grid">
 						<div class="theme-option" onclick="changeTheme('blue')">
 							<div class="theme-preview blue-theme"></div>
