--- a/index.html
+++ b/index.html
@@ -1060,12 +1060,28 @@
 			border-radius: 10px;
 			border: 2px solid #ddd;
 			transition: all 0.3s ease;
+			box-shadow: 0 4px 15px rgba(0,0,0,0.1);
 		}
 
 		.theme-option:hover {
-			border-color: #4a69bd;
+			border-color: #A6A6A6;
 			transform: translateY(-2px);
 			box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+		}
+		.theme-option:nth-child(1) {
+			border-left: 5px solid #2d4373;
+		}
+
+		.theme-option:nth-child(2) {
+			border-left: 5px solid #1e7e34;
+		}
+
+		.theme-option:nth-child(3) {
+			border-left: 5px solid #c0611d;
+		}
+
+		.theme-option:nth-child(4) {
+			border-left: 5px solid #1a1a1a;
 		}
 
 		.theme-option.active {
