--- a/index.html
+++ b/index.html
@@ -1099,19 +1099,19 @@
 		}
 
 		.blue-theme {
-			background: linear-gradient(45deg, #4a69bd, #667eea);
+			background: linear-gradient(90deg, #2d4373, #1a2642);
 		}
 
 		.green-theme {
-			background: linear-gradient(45deg, #27ae60, #2ecc71);
+			background: linear-gradient(90deg, #1e7e34, #145523);
 		}
 
 		.orange-theme {
-			background: linear-gradient(45deg, #e67e22, #f39c12);
+			background: linear-gradient(90deg, #c0611d, #9c4a10);
 		}
 
 		.dark-theme {
-			background: linear-gradient(45deg, #000000, #262626);
+			background: linear-gradient(90deg, #1a1a1a, #0d0d0d);
 		}
 
 		/* Variables CSS para temas */
