--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		}
 
 		.header h1 {
-			margin-bottom: 10px;
+			margin-bottom: 0px;
 			font-size: 2em;
 		}
 
@@ -750,6 +750,7 @@
 		    .header {
 		        padding: 15px;
 		        gap: 10px;
+				padding left: 24px
 		    }
 			
 			.side-menu {
