--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
 		    .header {
 		        padding: 15px;
 		        gap: 10px;
-				padding left: 24px
+				padding left: 24px;
 		    }
 			
 			.side-menu {
