--- a/index.html
+++ b/index.html
@@ -748,10 +748,9 @@
 		    }
 		    
 		    .header {
-		        padding left: 24px;
 				padding: 15px;
 		        gap: 10px;
-				
+				padding-left: 24px;
 		    }
 			
 			.side-menu {
