--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			cursor: pointer;
 			padding: 10px;
 			z-index: 1000;
-			width: 50px; /* Ancho fijo */
+			width: 50px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
