--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
         }
         
 		.header {
-		    background: var(--header-bg);
-		    color: white;
-		    padding: 20px;
-		    display: flex;
-		    justify-content: space-between;
-		    align-items: center;
-		    gap: 15px;
+			background: var(--header-bg);
+			color: white;
+			padding: 20px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			gap: 15px;
+			position: sticky;
+			top: 0;
+			z-index: 100;
 		}
 		
 		.logo-container {
